refactoring and bugfixing
